--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,9 +1,26 @@
 .about__container{
-    margin-top: 15%;
-    grid-template-columns: 3fr 9fr;
+    margin-top: 20%;
+    grid-template-columns: 4fr 8fr;
     column-gap: 1.875rem;
     font-size: 20px;
+    text-align: center;
+}
 
+.about__img{
+    border-radius: 100%;
+    width: 80%;
+    height: auto;
+    margin-left: 5%;
+
+    
+}
+
+.img_cover{
+   
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    
 }
 
 .section__title-about{
@@ -11,6 +28,7 @@
     text-align: center;
     
 }
+
 .btn{
     margin-left: auto;
     margin-right: auto;
